Fixed Broken UI Issue
I just Disabled the Bootstrap and changed iframe's position to absolute so that when the iframe opens, the desktop icons won't shift to the bottom

--- a/src/webapps.css
+++ b/src/webapps.css
@@ -32,4 +32,5 @@
 
 #browser{
   display: none;
+  position: absolute;
 }
